hw5/y.output
State 28 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 174 conflicts: 5 reduce/reduce
State 292 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator compound_statement
    7                    | declarator compound_statement

    8 declaration: declaration_specifiers init_declarator_list SEMICOLON

    9 declaration_specifiers: type_specifier
   10                       | storage_class_specifer
   11                       | type_qualifier
   12                       | type_specifier declaration_specifiers
   13                       | storage_class_specifer declaration_specifiers
   14                       | type_qualifier declaration_specifiers

   15 storage_class_specifer: AUTO_SYM
   16                       | STATIC_SYM
   17                       | TYPEDEF_SYM
   18                       | REGISTER_SYM
   19                       | EXTERN_SYM

   20 type_qualifier: CONST_SYM

   21 init_declarator_list: init_declarator
   22                     | init_declarator_list COMMA init_declarator

   23 init_declarator: declarator
   24                | declarator ASSIGN initializer

   25 type_specifier: struct_specifier
   26               | enum_specifier
   27               | TYPE_IDENTIFIER

   28 struct_specifier: struct_or_union IDENTIFIER LBRACE struct_declaration_list RBRACE
   29                 | struct_or_union LBRACKET struct_declaration_list RBRACKET
   30                 | struct_or_union IDENTIFIER

   31 struct_or_union: STRUCT_SYM
   32                | UNION_SYM

   33 struct_declaration_list: struct_declaration
   34                        | struct_declaration_list struct_declaration

   35 struct_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON

   36 specifier_qualifier_list: type_specifier
   37                         | type_qualifier
   38                         | type_specifier specifier_qualifier_list
   39                         | type_qualifier specifier_qualifier_list

   40 struct_declarator_list: struct_declarator
   41                       | struct_declarator_list COMMA struct_declarator

   42 struct_declarator: declarator
   43                  | COLON constant_expression
   44                  | declarator COLON constant_expression

   45 enum_specifier: ENUM_SYM IDENTIFIER LBRACE enumerator_list RBRACE
   46               | ENUM_SYM LBRACE enumerator_list RBRACE
   47               | ENUM_SYM IDENTIFIER

   48 enumerator_list: enumerator
   49                | enumerator_list COMMA enumerator

   50 enumerator: IDENTIFIER
   51           | IDENTIFIER ASSIGN constant_expression

   52 declarator: pointer direct_declarator
   53           | direct_declarator

   54 pointer: STAR type_qualifier
   55        | STAR type_qualifier pointer

   56 direct_declarator: IDENTIFIER
   57                  | LPAREN declarator RPAREN
   58                  | direct_declarator LBRACKET constant_expression_opt RBRACKET
   59                  | direct_declarator LPAREN parameter_type_list RPAREN

   60 constant_expression_opt: /* empty */
   61                        | constant_expression

   62 parameter_type_list_opt: /* empty */
   63                        | parameter_type_list

   64 parameter_type_list: parameter_list
   65                    | parameter_list COMMA DOTDOTDOT

   66 parameter_list: parameter_declaration
   67               | parameter_list COMMA parameter_declaration

   68 parameter_declaration: declaration_specifiers declarator
   69                      | declaration_specifiers abstract_declarator_opt

   70 abstract_declarator_opt: /* empty */
   71                        | abstract_declarator

   72 abstract_declarator: pointer
   73                    | direct_abstract_declarator
   74                    | pointer direct_abstract_declarator

   75 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
   76                           | LBRACKET constant_expression_opt RBRACKET
   77                           | LPAREN parameter_type_list_opt RPAREN
   78                           | direct_abstract_declarator LBRACKET constant_expression_opt RBRACKET
   79                           | direct_abstract_declarator LPAREN parameter_type_list_opt RPAREN

   80 initializer: expression
   81            | LBRACE initializer_list RBRACE
   82            | LBRACE init_declarator_list COMMA RBRACE

   83 initializer_list: initializer
   84                 | initializer_list COMMA initializer

   85 statement: labled_statement
   86          | compound_statement
   87          | expression_statement
   88          | selection_statement
   89          | iteration_statement
   90          | jump_statement

   91 labled_statement: CASE_SYM constant_expression COLON statement
   92                 | DEFAULT_SYM COLON statement

   93 compound_statement: LBRACKET declaration_list statement_list RBRACKET

   94 declaration_list: /* empty */
   95                 | declaration_list declaration

   96 statement_list: /* empty */
   97               | statement_list statement

   98 expression_statement: SEMICOLON
   99                     | expression SEMICOLON

  100 selection_statement: IF_SYM LPAREN expression RPAREN statement
  101                    | IF_SYM LPAREN expression RPAREN statement ELSE_SYM statement
  102                    | SWITCH_SYM LPAREN expression RPAREN statement

  103 iteration_statement: WHILE_SYM LPAREN expression RPAREN statement
  104                    | DO_SYM statement WHILE_SYM LPAREN expression RPAREN
  105                    | FOR_SYM LPAREN expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RPAREN statement

  106 expression_opt: /* empty */
  107               | expression

  108 jump_statement: RETURN_SYM expression_opt SEMICOLON
  109               | CONTINUE_SYM SEMICOLON
  110               | BREAK_SYM SEMICOLON

  111 primary_expression: IDENTIFIER
  112                   | INTEGER_CONSTANT
  113                   | FLOAT_CONSTANT
  114                   | CHARACTER_CONSTANT
  115                   | STRING_LITERAL
  116                   | LPAREN expression RPAREN

  117 postfix_expression: primary_expression
  118                   | postfix_expression LBRACKET expression RBRACKET
  119                   | postfix_expression LPAREN arg_expression_list_opt RPAREN
  120                   | postfix_expression DOT IDENTIFIER
  121                   | postfix_expression ARROW IDENTIFIER
  122                   | postfix_expression PLUSPLUS
  123                   | postfix_expression MINUSMINUS

  124 arg_expression_list_opt: /* empty */
  125                        | arg_expression_list

  126 arg_expression_list: assignment_expression
  127                    | arg_expression_list COMMA assignment_expression

  128 unary_expression: postfix_expression
  129                 | PLUSPLUS unary_expression
  130                 | MINUSMINUS unary_expression
  131                 | AMP cast_expression
  132                 | STAR cast_expression
  133                 | EXCLAM cast_expression
  134                 | MINUS cast_expression
  135                 | NOT cast_expression
  136                 | PLUS cast_expression
  137                 | SIZEOF_SYM unary_expression
  138                 | SIZEOF_SYM LPAREN type_name RPAREN

  139 cast_expression: unary_expression
  140                | LPAREN type_name RPAREN cast_expression

  141 type_name: declaration_specifiers
  142          | declaration_specifiers abstract_declarator

  143 multiplicative_expression: cast_expression
  144                          | multiplicative_expression STAR cast_expression
  145                          | multiplicative_expression SLASH cast_expression
  146                          | multiplicative_expression PERCENT cast_expression

  147 additive_expression: multiplicative_expression
  148                    | additive_expression PLUS multiplicative_expression
  149                    | additive_expression MINUS multiplicative_expression

  150 shift_expression: additive_expression

  151 relational_expression: shift_expression
  152                      | relational_expression LESS shift_expression
  153                      | relational_expression GREATER shift_expression
  154                      | relational_expression LEQ shift_expression
  155                      | relational_expression GEQ shift_expression

  156 equality_expression: relational_expression
  157                    | equality_expression EQUAL relational_expression
  158                    | equality_expression NEQ relational_expression

  159 AND_expression: equality_expression
  160               | AND_expression AMP equality_expression

  161 OR_expression: AND_expression
  162              | OR_expression BAR AND_expression

  163 logical_AND_expression: OR_expression
  164                       | logical_AND_expression AMPAMP OR_expression

  165 logical_OR_expression: logical_AND_expression
  166                      | logical_OR_expression BARBAR logical_AND_expression

  167 conditional_expression: logical_OR_expression

  168 assignment_expression: conditional_expression
  169                      | unary_expression ASSIGN assignment_expression

  170 expression: assignment_expression
  171           | expression COMMA assignment_expression

  172 constant_expression: expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 28 30 45 47 50 51 56 111 120 121
TYPE_IDENTIFIER (259) 27
INTEGER_CONSTANT (260) 112
FLOAT_CONSTANT (261) 113
CHARACTER_CONSTANT (262) 114
STRING_LITERAL (263) 115
PLUS (264) 136 148
MINUS (265) 134 149
PLUSPLUS (266) 122 129
MINUSMINUS (267) 123 130
STAR (268) 54 55 132 144
SLASH (269) 145
PERCENT (270) 146
LPAREN (271) 57 59 75 77 79 100 101 102 103 104 105 116 119 138 140
RPAREN (272) 57 59 75 77 79 100 101 102 103 104 105 116 119 138 140
LBRACE (273) 28 45 46 81 82
RBRACE (274) 28 45 46 81 82
LBRACKET (275) 29 58 76 78 93 118
RBRACKET (276) 29 58 76 78 93 118
ARROW (277) 121
EQUAL (278) 157
LESS (279) 152
GREATER (280) 153
EXCLAM (281) 133
LEQ (282) 154
GEQ (283) 155
NEQ (284) 158
AMPAMP (285) 164
BARBAR (286) 166
AMP (287) 131 160
BAR (288) 162
NOT (289) 135
DOT (290) 120
DOTDOTDOT (291) 65
COLON (292) 43 44 91 92
SEMICOLON (293) 8 35 98 99 105 108 109 110
COMMA (294) 22 41 49 65 67 82 84 127 171
ASSIGN (295) 24 51 169
AUTO_SYM (296) 15
STATIC_SYM (297) 16
REGISTER_SYM (298) 18
EXTERN_SYM (299) 19
CONST_SYM (300) 20
TYPEDEF_SYM (301) 17
STRUCT_SYM (302) 31
UNION_SYM (303) 32
ENUM_SYM (304) 45 46 47
SIZEOF_SYM (305) 137 138
DO_SYM (306) 104
WHILE_SYM (307) 103 104
FOR_SYM (308) 105
IF_SYM (309) 100 101
ELSE_SYM (310) 101
SWITCH_SYM (311) 102
CASE_SYM (312) 91
DEFAULT_SYM (313) 92
RETURN_SYM (314) 108
CONTINUE_SYM (315) 109
BREAK_SYM (316) 110


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 1, on right: 0
translation_unit (64)
    on left: 2 3, on right: 1 3
external_declaration (65)
    on left: 4 5, on right: 2 3
function_definition (66)
    on left: 6 7, on right: 4
declaration (67)
    on left: 8, on right: 5 95
declaration_specifiers (68)
    on left: 9 10 11 12 13 14, on right: 6 8 12 13 14 68 69 141 142
storage_class_specifer (69)
    on left: 15 16 17 18 19, on right: 10 13
type_qualifier (70)
    on left: 20, on right: 11 14 37 39 54 55
init_declarator_list (71)
    on left: 21 22, on right: 8 22 82
init_declarator (72)
    on left: 23 24, on right: 21 22
type_specifier (73)
    on left: 25 26 27, on right: 9 12 36 38
struct_specifier (74)
    on left: 28 29 30, on right: 25
struct_or_union (75)
    on left: 31 32, on right: 28 29 30
struct_declaration_list (76)
    on left: 33 34, on right: 28 29 34
struct_declaration (77)
    on left: 35, on right: 33 34
specifier_qualifier_list (78)
    on left: 36 37 38 39, on right: 35 38 39
struct_declarator_list (79)
    on left: 40 41, on right: 35 41
struct_declarator (80)
    on left: 42 43 44, on right: 40 41
enum_specifier (81)
    on left: 45 46 47, on right: 26
enumerator_list (82)
    on left: 48 49, on right: 45 46 49
enumerator (83)
    on left: 50 51, on right: 48 49
declarator (84)
    on left: 52 53, on right: 6 7 23 24 42 44 57 68
pointer (85)
    on left: 54 55, on right: 52 55 72 74
direct_declarator (86)
    on left: 56 57 58 59, on right: 52 53 58 59
constant_expression_opt (87)
    on left: 60 61, on right: 58 76 78
parameter_type_list_opt (88)
    on left: 62 63, on right: 77 79
parameter_type_list (89)
    on left: 64 65, on right: 59 63
parameter_list (90)
    on left: 66 67, on right: 64 65 67
parameter_declaration (91)
    on left: 68 69, on right: 66 67
abstract_declarator_opt (92)
    on left: 70 71, on right: 69
abstract_declarator (93)
    on left: 72 73 74, on right: 71 75 142
direct_abstract_declarator (94)
    on left: 75 76 77 78 79, on right: 73 74 78 79
initializer (95)
    on left: 80 81 82, on right: 24 83 84
initializer_list (96)
    on left: 83 84, on right: 81 84
statement (97)
    on left: 85 86 87 88 89 90, on right: 91 92 97 100 101 102 103
    104 105
labled_statement (98)
    on left: 91 92, on right: 85
compound_statement (99)
    on left: 93, on right: 6 7 86
declaration_list (100)
    on left: 94 95, on right: 93 95
statement_list (101)
    on left: 96 97, on right: 93 97
expression_statement (102)
    on left: 98 99, on right: 87
selection_statement (103)
    on left: 100 101 102, on right: 88
iteration_statement (104)
    on left: 103 104 105, on right: 89
expression_opt (105)
    on left: 106 107, on right: 105 108
jump_statement (106)
    on left: 108 109 110, on right: 90
primary_expression (107)
    on left: 111 112 113 114 115 116, on right: 117
postfix_expression (108)
    on left: 117 118 119 120 121 122 123, on right: 118 119 120 121
    122 123 128
arg_expression_list_opt (109)
    on left: 124 125, on right: 119
arg_expression_list (110)
    on left: 126 127, on right: 125 127
unary_expression (111)
    on left: 128 129 130 131 132 133 134 135 136 137 138,
    on right: 129 130 137 139 169
cast_expression (112)
    on left: 139 140, on right: 131 132 133 134 135 136 140 143 144
    145 146
type_name (113)
    on left: 141 142, on right: 138 140
multiplicative_expression (114)
    on left: 143 144 145 146, on right: 144 145 146 147 148 149
additive_expression (115)
    on left: 147 148 149, on right: 148 149 150
shift_expression (116)
    on left: 150, on right: 151 152 153 154 155
relational_expression (117)
    on left: 151 152 153 154 155, on right: 152 153 154 155 156 157
    158
equality_expression (118)
    on left: 156 157 158, on right: 157 158 159 160
AND_expression (119)
    on left: 159 160, on right: 160 161 162
OR_expression (120)
    on left: 161 162, on right: 162 163 164
logical_AND_expression (121)
    on left: 163 164, on right: 164 165 166
logical_OR_expression (122)
    on left: 165 166, on right: 166 167
conditional_expression (123)
    on left: 167, on right: 168
assignment_expression (124)
    on left: 168 169, on right: 126 127 169 170 171
expression (125)
    on left: 170 171, on right: 80 99 100 101 102 103 104 107 116 118
    171 172
constant_expression (126)
    on left: 172, on right: 43 44 51 61 91


state 0

    0 $accept: . program $end

    IDENTIFIER       shift, and go to state 1
    TYPE_IDENTIFIER  shift, and go to state 2
    STAR             shift, and go to state 3
    LPAREN           shift, and go to state 4
    AUTO_SYM         shift, and go to state 5
    STATIC_SYM       shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    TYPEDEF_SYM      shift, and go to state 10
    STRUCT_SYM       shift, and go to state 11
    UNION_SYM        shift, and go to state 12
    ENUM_SYM         shift, and go to state 13

    program                 go to state 14
    translation_unit        go to state 15
    external_declaration    go to state 16
    function_definition     go to state 17
    declaration             go to state 18
    declaration_specifiers  go to state 19
    storage_class_specifer  go to state 20
    type_qualifier          go to state 21
    type_specifier          go to state 22
    struct_specifier        go to state 23
    struct_or_union         go to state 24
    enum_specifier          go to state 25
    declarator              go to state 26
    pointer                 go to state 27
    direct_declarator       go to state 28


state 1

   56 direct_declarator: IDENTIFIER .

    $default  reduce using rule 56 (direct_declarator)


state 2

   27 type_specifier: TYPE_IDENTIFIER .

    $default  reduce using rule 27 (type_specifier)


state 3

   54 pointer: STAR . type_qualifier
   55        | STAR . type_qualifier pointer

    CONST_SYM  shift, and go to state 9

    type_qualifier  go to state 29


state 4

   57 direct_declarator: LPAREN . declarator RPAREN

    IDENTIFIER  shift, and go to state 1
    STAR        shift, and go to state 3
    LPAREN      shift, and go to state 4

    declarator         go to state 30
    pointer            go to state 27
    direct_declarator  go to state 28


state 5

   15 storage_class_specifer: AUTO_SYM .

    $default  reduce using rule 15 (storage_class_specifer)


state 6

   16 storage_class_specifer: STATIC_SYM .

    $default  reduce using rule 16 (storage_class_specifer)


state 7

   18 storage_class_specifer: REGISTER_SYM .

    $default  reduce using rule 18 (storage_class_specifer)


state 8

   19 storage_class_specifer: EXTERN_SYM .

    $default  reduce using rule 19 (storage_class_specifer)


state 9

   20 type_qualifier: CONST_SYM .

    $default  reduce using rule 20 (type_qualifier)


state 10

   17 storage_class_specifer: TYPEDEF_SYM .

    $default  reduce using rule 17 (storage_class_specifer)


state 11

   31 struct_or_union: STRUCT_SYM .

    $default  reduce using rule 31 (struct_or_union)


state 12

   32 struct_or_union: UNION_SYM .

    $default  reduce using rule 32 (struct_or_union)


state 13

   45 enum_specifier: ENUM_SYM . IDENTIFIER LBRACE enumerator_list RBRACE
   46               | ENUM_SYM . LBRACE enumerator_list RBRACE
   47               | ENUM_SYM . IDENTIFIER

    IDENTIFIER  shift, and go to state 31
    LBRACE      shift, and go to state 32


state 14

    0 $accept: program . $end

    $end  shift, and go to state 33


state 15

    1 program: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    IDENTIFIER       shift, and go to state 1
    TYPE_IDENTIFIER  shift, and go to state 2
    STAR             shift, and go to state 3
    LPAREN           shift, and go to state 4
    AUTO_SYM         shift, and go to state 5
    STATIC_SYM       shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    TYPEDEF_SYM      shift, and go to state 10
    STRUCT_SYM       shift, and go to state 11
    UNION_SYM        shift, and go to state 12
    ENUM_SYM         shift, and go to state 13

    $default  reduce using rule 1 (program)

    external_declaration    go to state 34
    function_definition     go to state 17
    declaration             go to state 18
    declaration_specifiers  go to state 19
    storage_class_specifer  go to state 20
    type_qualifier          go to state 21
    type_specifier          go to state 22
    struct_specifier        go to state 23
    struct_or_union         go to state 24
    enum_specifier          go to state 25
    declarator              go to state 26
    pointer                 go to state 27
    direct_declarator       go to state 28


state 16

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 17

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


state 18

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


state 19

    6 function_definition: declaration_specifiers . declarator compound_statement
    8 declaration: declaration_specifiers . init_declarator_list SEMICOLON

    IDENTIFIER  shift, and go to state 1
    STAR        shift, and go to state 3
    LPAREN      shift, and go to state 4

    init_declarator_list  go to state 35
    init_declarator       go to state 36
    declarator            go to state 37
    pointer               go to state 27
    direct_declarator     go to state 28


state 20

   10 declaration_specifiers: storage_class_specifer .
   13                       | storage_class_specifer . declaration_specifiers

    TYPE_IDENTIFIER  shift, and go to state 2
    AUTO_SYM         shift, and go to state 5
    STATIC_SYM       shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    TYPEDEF_SYM      shift, and go to state 10
    STRUCT_SYM       shift, and go to state 11
    UNION_SYM        shift, and go to state 12
    ENUM_SYM         shift, and go to state 13

    $default  reduce using rule 10 (declaration_specifiers)

    declaration_specifiers  go to state 38
    storage_class_specifer  go to state 20
    type_qualifier          go to state 21
    type_specifier          go to state 22
    struct_specifier        go to state 23
    struct_or_union         go to state 24
    enum_specifier          go to state 25


state 21

   11 declaration_specifiers: type_qualifier .
   14                       | type_qualifier . declaration_specifiers

    TYPE_IDENTIFIER  shift, and go to state 2
    AUTO_SYM         shift, and go to state 5
    STATIC_SYM       shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    TYPEDEF_SYM      shift, and go to state 10
    STRUCT_SYM       shift, and go to state 11
    UNION_SYM        shift, and go to state 12
    ENUM_SYM         shift, and go to state 13

    $default  reduce using rule 11 (declaration_specifiers)

    declaration_specifiers  go to state 39
    storage_class_specifer  go to state 20
    type_qualifier          go to state 21
    type_specifier          go to state 22
    struct_specifier        go to state 23
    struct_or_union         go to state 24
    enum_specifier          go to state 25


state 22

    9 declaration_specifiers: type_specifier .
   12                       | type_specifier . declaration_specifiers

    TYPE_IDENTIFIER  shift, and go to state 2
    AUTO_SYM         shift, and go to state 5
    STATIC_SYM       shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    TYPEDEF_SYM      shift, and go to state 10
    STRUCT_SYM       shift, and go to state 11
    UNION_SYM        shift, and go to state 12
    ENUM_SYM         shift, and go to state 13

    $default  reduce using rule 9 (declaration_specifiers)

    declaration_specifiers  go to state 40
    storage_class_specifer  go to state 20
    type_qualifier          go to state 21
    type_specifier          go to state 22
    struct_specifier        go to state 23
    struct_or_union         go to state 24
    enum_specifier          go to state 25


state 23

   25 type_specifier: struct_specifier .

    $default  reduce using rule 25 (type_specifier)


state 24

   28 struct_specifier: struct_or_union . IDENTIFIER LBRACE struct_declaration_list RBRACE
   29                 | struct_or_union . LBRACKET struct_declaration_list RBRACKET
   30                 | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 41
    LBRACKET    shift, and go to state 42


state 25

   26 type_specifier: enum_specifier .

    $default  reduce using rule 26 (type_specifier)


state 26

    7 function_definition: declarator . compound_statement

    LBRACKET  shift, and go to state 43

    compound_statement  go to state 44


state 27

   52 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 1
    LPAREN      shift, and go to state 4

    direct_declarator  go to state 45


state 28

   53 declarator: direct_declarator .
   58 direct_declarator: direct_declarator . LBRACKET constant_expression_opt RBRACKET
   59                  | direct_declarator . LPAREN parameter_type_list RPAREN

    LPAREN    shift, and go to state 46
    LBRACKET  shift, and go to state 47

    LBRACKET  [reduce using rule 53 (declarator)]
    $default  reduce using rule 53 (declarator)


state 29

   54 pointer: STAR type_qualifier .
   55        | STAR type_qualifier . pointer

    STAR  shift, and go to state 3

    $default  reduce using rule 54 (pointer)

    pointer  go to state 48


state 30

   57 direct_declarator: LPAREN declarator . RPAREN

    RPAREN  shift, and go to state 49


state 31

   45 enum_specifier: ENUM_SYM IDENTIFIER . LBRACE enumerator_list RBRACE
   47               | ENUM_SYM IDENTIFIER .

    LBRACE  shift, and go to state 50

    $default  reduce using rule 47 (enum_specifier)


state 32

   46 enum_specifier: ENUM_SYM LBRACE . enumerator_list RBRACE

    IDENTIFIER  shift, and go to state 51

    enumerator_list  go to state 52
    enumerator       go to state 53


state 33

    0 $accept: program $end .

    $default  accept


state 34

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


state 35

    8 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   22 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 54
    COMMA      shift, and go to state 55


state 36

   21 init_declarator_list: init_declarator .

    $default  reduce using rule 21 (init_declarator_list)


state 37

    6 function_definition: declaration_specifiers declarator . compound_statement
   23 init_declarator: declarator .
   24                | declarator . ASSIGN initializer

    LBRACKET  shift, and go to state 43
    ASSIGN    shift, and go to state 56

    $default  reduce using rule 23 (init_declarator)

    compound_statement  go to state 57


state 38

   13 declaration_specifiers: storage_class_specifer declaration_specifiers .

    $default  reduce using rule 13 (declaration_specifiers)


state 39

   14 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 14 (declaration_specifiers)


state 40

   12 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 12 (declaration_specifiers)


state 41
